# fortfuck

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  test.sh  testa.sh  testfbc.sh  testgcc.sh
.github/workflows/: main.yml
samples/: README.md
samples/s0/: add.b
samples/s1/: expected-output.txt  mul.b
samples/s2/: div.b  expected-output.txt
samples/s3/: quine-brian-raiter.b
samples/s5/expected-output/: numwarp.out
src/: fbc.f90
